[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
dqtt = { path = "../dqtt" }
chrono = { version = "=0.4.26", default-features = false, features = ["clock", "std", "serde"] }
crossbeam-channel = "0.5"
m3u8-rs = "=5.0.4"
rodio = { version = "=0.17.1", default-features = false, features = ["symphonia-aac"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
ureq = { version = "=2.7.1", features = ["native-certs"] }
