[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
dqtt = { path = "../dqtt" }
chrono = { version = "=0.4.31", default-features = false, features = ["clock", "std", "serde"] }
crossbeam-channel = "0.5"
m3u8-rs = "=5.0.5"
rodio = { version = "=0.17.3", default-features = false, features = ["symphonia-aac"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
ureq = { version = "=2.9.1", features = ["native-certs"] }
