[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
dqtt = { path = "../dqtt" }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "serde"] }
crossbeam-channel = "0.5"
m3u8-rs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.2"
ureq = { version = "2.10.0", features = ["native-certs"] }
